# IR_project

./: .gitignore  examples_first5.json  final_processing.py  main.py  merged_results.json  pyproject.toml  regression_results.json  roc_results.json  safe_evaluation.py  scores_results.json  scores_results1.json  scores_results2.json  scores_results3.json  scores_results4.json  scores_results5.json  scores_results6.json  scores_results7.json  scores_results8.json  test_qwen_litellm.py  test_serper_output.py
evaluation/: safe_evaluation.py  ue.py
experiments/: regression_test.py  test_serper_output.py
models/: indexing.sh  qwen.py  rerankmodel.py  safe_evaluator.py
notebooks/: data_inspection.ipynb  regressions.ipynb  seed_test.ipynb
scripts/: job.sh
