[project]
name = "ir-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "ipykernel>=6.30.1",
    "notebook>=7.4.7",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.57.0",
    "pyserini >=1.2.0",
    "openai>=2.4.0",
]

[tool.uv.workspace]
members = [
    "IR",
]
